2022-11-26  Alex Kotov  <kotovalexarian@gmail.com>

	libkernaux 0.5.0 released