@@ -1,3 +1,7 @@
+2022-11-29  Alex Kotov  <kotovalexarian@gmail.com>
+
+	* include/kernaux/macro.h: Add macro "KERNAUX_UNUSED"
+
 2022-11-26  Alex Kotov  <kotovalexarian@gmail.com>
 
 	libkernaux 0.5.0 released
